target/kubernetes/openshift.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2021-04-06 - 12:00:06 +0000"
    app.opesnhift.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
    app.quarkus.io/commit-id: "f2f78d26aeac81e2e791c0ced37f530a5ffb55aa"
    app.quarkus.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
  labels:
    app.kubernetes.io/name: "kogitotest"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app: "smart-meter-rules"
    app.openshift.io/runtime: "quarkus"
  name: "kogitotest"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "kogitotest"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  type: "ClusterIP"
---
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2021-04-06 - 12:00:06 +0000"
    app.opesnhift.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
    app.quarkus.io/commit-id: "f2f78d26aeac81e2e791c0ced37f530a5ffb55aa"
    app.quarkus.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
  labels:
    app.kubernetes.io/name: "kogitotest"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app: "smart-meter-rules"
    app.openshift.io/runtime: "quarkus"
  name: "kogitotest"
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: "kogitotest"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: "2021-04-06 - 12:00:06 +0000"
        app.opesnhift.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
        app.quarkus.io/commit-id: "f2f78d26aeac81e2e791c0ced37f530a5ffb55aa"
        app.quarkus.io/vcs-url: "https://github.com/gcolman/kogitotest.git"
      labels:
        app.kubernetes.io/name: "kogitotest"
        app.kubernetes.io/version: "1.0-SNAPSHOT"
        app: "smart-meter-rules"
        app.openshift.io/runtime: "quarkus"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        - name: "JAVA_APP_JAR"
          value: "/deployments/kogitotest-1.0-SNAPSHOT-runner.jar"
        - name: "JAVA_LIB_DIR"
          value: "/deployments/lib"
        - name: "JAVA_CLASSPATH"
          value: "/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.jar:/deployments/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.jar:/deployments/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/lib/io.smallrye.config.smallrye-config-common-1.7.0.jar:/deployments/lib/io.smallrye.config.smallrye-config-1.7.0.jar:/deployments/lib/org.jboss.logging.jboss-logging-3.3.2.Final.jar:/deployments/lib/org.jboss.log [...]
        - name: "JAVA_OPTIONS"
          value: "-Dquarkus.http.host=0.0.0.0  -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
        image: "gcolman/kogitotest:1.0-SNAPSHOT"
        imagePullPolicy: "IfNotPresent"
        name: "kogitotest"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
      serviceAccount: "kogitotest"
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - "kogitotest"
      from:
        kind: "ImageStreamTag"
        name: "kogitotest:1.0-SNAPSHOT"
    type: "ImageChange"
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  labels:
    app.kubernetes.io/name: "kogitotest"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  name: "kogitotest"
spec:
  host: ""
  path: "/"
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: "kogitotest"
